Move thread watcher alignment fix to themes only
It looks worse for some default themes, so it's not a general fix.

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -1310,7 +1310,6 @@ input[type="file"] {
 	/*justify-content: space-between;*/
 	padding: 3px;
 	box-sizing: border-box;
-	align-items: center;
 }
 
 .watched-thread a {
